# mangatrans

./: Cargo.toml  README.md  example.toml
src/: japanese.rs  language.rs  main.rs  report.rs  stats.rs  structure.rs  transcribe.rs
